# cloudsmith-cs-interview-candidate

./: README.md  pyproject.toml
.github/workflows/: build_package.yml  promote_package.yml  release_package.yml
src/example_package/: example.py
