[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-package"  # Add a valid package name
version = "0.0.1"  # Add a version field

authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 